<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="300dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/title_finger"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_title_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_position"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@id/tv_title"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />


        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/acs_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/finger"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_position"
            app:layout_constraintLeft_toRightOf="@id/tv_title_position"
            app:layout_constraintTop_toTopOf="@id/tv_title_position" />

        <ImageView
            android:id="@+id/iv_finger"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_baseline_fingerprint_24"
            app:layout_constraintLeft_toLeftOf="@id/acs_spinner"
            app:layout_constraintRight_toRightOf="@id/acs_spinner"
            app:layout_constraintTop_toBottomOf="@id/acs_spinner" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btn_capture"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_confirm"
            app:layout_constraintTop_toBottomOf="@id/iv_finger" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_confirm"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/btn_capture"
            app:layout_constraintLeft_toRightOf="@id/btn_capture"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_capture"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>